# efficient-lerf

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: template.yaml
experiments/: common.py  compute_metrics.py  evaluate_codebook.py  evaluate_existence.py  evaluate_feature_maps.py  evaluate_feature_maps_local.py  evaluate_feature_superpixel_alignment.py  evaluate_implementation.py  evaluate_localization.py  example_scene_editing.py  quantize_scenes.py
experiments/existence/: bouquet.json  bouquet_iou.json  figurines.json  figurines_iou.json  teatime.json  teatime_iou.json  waldo_kitchen.json  waldo_kitchen_iou.json
experiments/feature_maps/: book_store.json  bouquet.json  donuts.json  dozer_nerfgun_waldo.json  espresso.json  figurines.json  fruit_aisle.json  hand_hand.json  metrics.json  ramen.json  shoe_rack.json  sunnyside.json  teatime.json  veggie_aisle.json  waldo_kitchen.json
experiments/feature_superpixel_alignment/: book_store.json  bouquet.json  donuts.json  dozer_nerfgun_waldo.json  espresso.json  figurines.json  fruit_aisle.json  hand_hand.json  metrics.json  ramen.json  shoe_rack.json  sunnyside.json  teatime.json  veggie_aisle.json  waldo_kitchen.json
experiments/implementation/: log.txt
experiments/localization/: bouquet.json  figurines.json  metrics.json  ramen.json  teatime.json  waldo_kitchen.json
internal/: lerf.py  lerf_datamanager.py
internal/langsplat/: preprocess.py  process.sh
internal/lerf/: lerf.py  lerf_datamanager.py
notebooks/: example_scene_editing.ipynb  sequence_point_cloud.ipynb
(+16 files in other folders)
